# backtest-report

./: .gitignore  LICENSE  Makefile  pyproject.toml
scripts/: generate_fixtures.py
specs/: backtest-report-spec.md  implementation_plan.md
src/backtest_report/: __init__.py  __main__.py  appendix.py  header.py  instrument.py  portfolio.py  positions.py  render.py  report.py
src/backtest_report/adapters/: __init__.py  quantconnect.py
src/backtest_report/templates/: report.html  style.css
src/backtest_report/templates/fonts/: OFL.txt
src/backtest_report/templates/sections/: appendix.html  attribution.html  header.html  instrument_pnl.html  instrument_table.html  monthly_returns.html  portfolio.html  portfolio_stats.html  position_snapshot.html  rolling_stats.html
tests/: conftest.py  test_header_appendix.py  test_instrument.py  test_portfolio.py  test_positions.py  test_render.py  test_report.py
tests/fixtures/: sample_instrument_pnl.parquet  sample_meta.json  sample_portfolio_returns.parquet  sample_positions.parquet
